@@ -1,13 +1,13 @@
 <Project name="libgphoto2-sharp" fileversion="2.0" language="C#" clr-version="Net_2_0" ctype="DotNetProject">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
-      <Output directory="src/" assemblyKeyFile="" assembly="libgphoto2-sharp" />
+      <Output directory="src/" assembly="libgphoto2-sharp" />
       <Build debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_2_0" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
-      <Output directory="src/" assemblyKeyFile="" assembly="libgphoto2-sharp" />
+      <Output directory="src/" assembly="libgphoto2-sharp" />
       <Build executeAfterBuild="../../../../usr/lib/monodevelop/bin/make distcheck" debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_2_0" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
@@ -36,6 +36,7 @@
     <File name="src/Files/ImageFile.cs" subtype="Code" buildaction="Compile" />
     <File name="src/Files/GenericFile.cs" subtype="Code" buildaction="Compile" />
     <File name="src/Files/PlaylistFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Utilities.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
