@@ -167,6 +167,18 @@ namespace Gphoto2
 		/// <returns></returns>
 		public static List<Camera> Detect()
 		{
+			if (Utilities.Is64Bit)
+			{
+				Console.WriteLine("A 64bit system has been detected. This is not supported");
+				Console.WriteLine("due to the complexity of interoperating with libgphoto2");
+				Console.WriteLine("as it exposes variable length 'long' types in it's API.");
+				Console.WriteLine("The API is unlikely to change before version 3 of the library");
+				Console.WriteLine("The current status of this can be found on the libgphoto2");
+				Console.WriteLine("mailing list. A detailed explanation can be found in the");
+				Console.WriteLine("README file for libgphoto2-sharp");
+				return new List<Camera>();
+			}
+			
 			List<Camera> cameras = new List<Camera>();
 			Context c = new Context();
 			
